# collision-resolver

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml  test.py
openspec/changes/add-3d-collision-resolution-service/: design.md  proposal.md  tasks.md
openspec/changes/add-3d-collision-resolution-service/specs/asset-preprocessing/: spec.md
openspec/changes/add-3d-collision-resolution-service/specs/collision-detection/: spec.md
openspec/changes/add-3d-collision-resolution-service/specs/collision-resolution/: spec.md
openspec/changes/add-3d-collision-resolution-service/specs/collision-verification/: spec.md
scripts/: run_local_case.py
src/collision_resolver/: __init__.py  backends.py  cache.py  cli.py  config.py  detection.py  exceptions.py  formula_collision.py  local_cli.py  math_utils.py  mesh_repair.py  models.py  planar_configuration.py  preprocess.py  preprocess_cache.py  preprocess_models.py  resolution.py  sdf_collision.py  service.py  visualization.py
tests/: helpers.py  test_cli.py  test_local_cli.py  test_preprocess.py  test_service.py
