[project]
name = "collision-resolver"
version = "0.1.0"
description = "3D 网格碰撞检测与自动修正后端服务"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pydantic>=2.13.0",
    "torch>=2.11.0",
    "coacd>=1.0.7",
    "python-fcl>=0.7.0.8",
    "shapely>=2.1.2",
]

[project.optional-dependencies]
mesh = [
    "trimesh>=4.9.0",
]
visualization = [
    "open3d>=0.19.0",
]

[project.scripts]
collision-resolver = "collision_resolver.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
